--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -12,22 +12,15 @@
   {{ if .IsHome }}
     {{ .Site.Title }}
   {{ else }}
-    {{ if .Title }}
-      {{ .Title }} | {{ .Site.Params.author }}
-    {{ else }}
-      {{ .Site.Params.author }}
-    {{ end }}
+    {{ .Title }} | {{ .Site.Params.author }}
   {{ end }}
 </title>
 
-<meta name="author" content="{{ (partial "author.html" . ) }}">
-{{- if .IsHome }}
-{{ with site.Params.keywords -}}<meta name="keywords" content="{{- range $i, $e := . }}{{ if $i }}, {{ end }}{{ $e }}{{ end }}">{{ end }}
-{{- else }}
-<meta name="keywords" content="{{ if .Params.keywords -}}
-    {{- range $i, $e := .Params.keywords }}{{ if $i }}, {{ end }}{{ $e }}{{ end }} {{- else }}
-    {{- range $i, $e := .Params.tags }}{{ if $i }}, {{ end }}{{ $e }}{{ end }} {{- end -}}">
-{{- end }}
+<meta name="keywords" content='
+  {{- with .Keywords -}}
+    {{- range $i, $e := . }}{{ if $i }}, {{ end }} {{ $e }}{{ end }}
+  {{- end -}}
+'>
 <meta name="description" content="{{- with .Description }}{{ . }}{{- else }}{{- if or .IsPage .IsSection}}
     {{- .Summary | default (printf "%s - %s" .Title  site.Title) }}{{- else }}
     {{- with site.Params.description }}{{ . }}{{- end }}{{- end }}{{- end -}}">
@@ -56,7 +49,7 @@
 {{- $stylesheet := (slice $license_css $core $extended) | resources.Concat "assets/css/stylesheet.css"  }}
 
 {{- if not site.Params.assets.disableFingerprinting }}
-{{- $stylesheet := $stylesheet | fingerprint }}
+{{- $stylesheet := $stylesheet | minify | fingerprint }}
 <link crossorigin="anonymous" href="{{ $stylesheet.RelPermalink }}" integrity="{{ $stylesheet.Data.Integrity }}" rel="preload stylesheet" as="style">
 {{- else }}
 <link crossorigin="anonymous" href="{{ $stylesheet.RelPermalink }}" rel="preload stylesheet" as="style">
@@ -65,7 +58,7 @@
 <noscript>
     {{- $noscript := (resources.Get "css/includes/noscript.css") }}
     {{- if not site.Params.assets.disableFingerprinting }}
-    {{- $noscript := $noscript | fingerprint }}
+    {{- $noscript := $noscript | minify | fingerprint }}
     <link crossorigin="anonymous" href="{{ $noscript.RelPermalink }}" integrity="{{ $noscript.Data.Integrity }}" rel="preload stylesheet" as="style">
     {{- else }}
     <link crossorigin="anonymous" href="{{ $noscript.RelPermalink }}" rel="preload stylesheet" as="style">
